
* LUCENE-1995: Note in javadocs that IndexWriter.setRAMBufferSizeMB
  cannot exceed 2048 MB, and throw IllegalArgumentException if it
  does.  (Aaron McKee, Yonik Seeley, Mike McCandless)

* LUCENE-2004: Fix Constants.LUCENE_MAIN_VERSION to not be inlined
  by client code.  (Uwe Schindler)
  
* LUCENE-2013: SpanRegexQuery does not work with QueryScorer.
  (Benjamin Keil via Mark Miller)

New features

* LUCENE-1933: Provide a convenience AttributeFactory that creates a
  Token instance for all basic attributes.  (Uwe Schindler)

Optimizations

* LUCENE-1183: Optimize Levenshtein Distance computation in
  FuzzyQuery.  (Cédrik Lime via Mike McCandless)

* LUCENE-2006: Optimization of FieldDocSortedHitQueue to always
  use Comparable<?> interface.  (Uwe Schindler, Mark Miller)

Documentation

* LUCENE-2008: Javadoc improvements for TokenStream/Tokenizer/Token
  (Luke Nezda via Mike McCandless)

Build

* LUCENE-486: Remove test->demo dependencies. (Michael Busch)

Test Cases

======================= Release 2.9.0 2009-09-23 =======================

Changes in backwards compatibility policy

 * LUCENE-1575: Searchable.search(Weight, Filter, int, Sort) no
    longer computes a document score for each hit by default.  If
    document score tracking is still needed, you can call
    IndexSearcher.setDefaultFieldSortScoring(true, true) to enable
    both per-hit and maxScore tracking; however, this is deprecated
    and will be removed in 3.0.

    Alternatively, use Searchable.search(Weight, Filter, Collector)
    and pass in a TopFieldCollector instance, using the following code
    sample:
 
    <code>
      TopFieldCollector tfc = TopFieldCollector.create(sort, numHits, fillFields, 
                                                       true /* trackDocScores */,
                                                       true /* trackMaxScore */,
                                                       false /* docsInOrder */);
      searcher.search(query, tfc);