@@ -128,15 +128,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashSet
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Random
 import|;
 end_import
@@ -29062,6 +29053,135 @@ name|w
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+name|d
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testEmbeddedFFFF
+specifier|public
+name|void
+name|testEmbeddedFFFF
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|Directory
+name|d
+init|=
+operator|new
+name|MockRAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|d
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|,
+name|IndexWriter
+operator|.
+name|MaxFieldLength
+operator|.
+name|UNLIMITED
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a a\uffffb"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|doc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|_TestUtil
+operator|.
+name|checkIndex
+argument_list|(
+name|d
+argument_list|)
 expr_stmt|;
 name|d
 operator|.
